# pipelines

./: .gitignore  Dockerfile  emoticons.tsv  example.py  languages.py  pyproject.toml
.github/workflows/: main.yml
pipeline/: languages.py  sentiment_model.py
preprocess/: text_cleaner.py
service/: main.py  sentiment_service.py
train/: train_model.py
