[tool.poetry]
name = "backend-document-sentiment-pipeline"
version = "0.0.1"
description = "A Python project with common NLP and document-sentiment-pipeline"
authors = ["Naibhivenkat <venkat.naibhi@gmail.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.*"
torch = "2.2.2"
numpy = ">=1.26,<2.0"
transformers = ">=4.40,<5.0"
emoji = ">=2.11,<3.0"
pandas = ">=2.0.3,<3.0"
pytest = ">=7.3,<8.0"
black = ">=24.3,<25.0"
isort = ">=5.13,<6.0"
mypy = ">=1.10,<2.0"
flake8 = ">=7.0,<8.0"
toml = ">=0.10,<1.0"
tiktoken = "^0.9.0"
datasets = "3.6.0"
yapf = "0.43.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
